# c-cplusplus-study

./: .gitignore  README.md  convert_utf8_sig.py
c++-books-code/linux-cxx-communication-architecture/: CMakeLists.txt  README.md  autobuild.sh
c++-books-code/linux-cxx-communication-architecture/c-code/: CMakeLists.txt
c++-books-code/linux-cxx-communication-architecture/cxx-code/: CMakeLists.txt
c++-books-code/linux-cxx-communication-architecture/include/: demo01.h  demo02.h
c++-books-code/linux-cxx-communication-architecture/src/: main.c
c++-project-cluster-chat-server/: .gitignore  CMakeLists.txt  README.md
c++-project-cluster-chat-server/include/: muduo_client.h  muduo_log.h  muduo_pool.h  muduo_server.h  test.h
c++-project-cluster-chat-server/include/public/: public.hpp  times.hpp  utils.hpp
c++-project-cluster-chat-server/include/server/: chatserver.hpp  chatservice.hpp  user.hpp
c++-project-cluster-chat-server/sql/: db.sql
c++-project-cluster-chat-server/src/: CMakeLists.txt  test.cpp
c++-project-cluster-chat-server/src/client/: CMakeLists.txt  main.cpp
c++-project-cluster-chat-server/src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
c++-project-db-connection-pool/: .gitignore  CMakeLists.txt  README.md
c++-project-db-connection-pool/config/: mysql.ini
c++-project-db-connection-pool/include/: Connection.h  ConnectionPool.h  MysqlConnection.h  MysqlConnectionPool.h  public.h
c++-project-db-connection-pool/script/: autobuild.sh
c++-project-db-connection-pool/sql/: mysql.sql
c++-project-db-connection-pool/src/: Connection.cpp  ConnectionPool.cpp  MysqlConnection.cpp  MysqlConnectionPool.cpp  main.cpp
c++-project-nginx-pool/: .gitignore  CMakeLists.txt  README.md
c++-project-nginx-pool/include/: ngx_mem_pool.h
c++-project-nginx-pool/src/: main.cpp  ngx_mem_pool.cpp
c++-project-thread-pool/: CMakeLists.txt  README.md
c++-project-thread-pool/c++-11-thread-pool/: .gitignore  CMakeLists.txt  README.md  thread_pool_test
c++-project-thread-pool/c++-11-thread-pool/include/: extend.h  thread_pool.h
c++-project-thread-pool/c++-11-thread-pool/src/: main.cpp  test.cpp  thread_pool.cpp
c++-project-thread-pool/c++-17-thread-pool/: CMakeLists.txt  README.md
c++-project-thread-pool/c++-17-thread-pool/include/: thread_pool.h
c++-project-thread-pool/c++-17-thread-pool/src/: test.cpp  thread_pool.cpp
c++-project-thread-pool/include/: thread_pool.h
c++-project-thread-pool/src/: main.cpp  thread_pool.cpp
c++-projects/c++-project-db-connection-pool/: .gitignore  CMakeLists.txt  README.md
c++-projects/c++-project-db-connection-pool/config/: mysql.ini
c++-projects/c++-project-db-connection-pool/include/: MysqlConnection.h  MysqlConnectionPool.h  public.h
c++-projects/c++-project-db-connection-pool/script/: autobuild.sh
c++-projects/c++-project-db-connection-pool/src/: MysqlConnection.cpp  MysqlConnectionPool.cpp  test.cpp
c++-projects/c++-project-mprpc/: .gitignore  2025-6-20-log.txt  CMakeLists.txt  README.md  autobuild.sh
c++-projects/c++-project-mprpc/config/: rpc.conf
c++-projects/c++-project-mprpc/example/: CMakeLists.txt
c++-projects/c++-project-mprpc/src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontext.cc  mprpccontroller.cc  mprpcprovider.cc  networkutil.cc  rpcprovider.cc  zookeeperclient.cc  zookeeperutil.cc
c++-projects/c++-project-mprpc/test/: CMakeLists.txt
c++-projects/c++-project-mysql-c-api/: CMakeLists.txt  README.md
c++-projects/c++-project-mysql-c-api/include/: config.h  mysqldb.h  user.h  userdao.h
c++-projects/c++-project-mysql-c-api/src/: main.cpp  mysqldb.cpp  userdao.cpp
c++-projects/c++-project-xxl-job-alert-manager/: .clang-format  .gitignore  CMakeLists.txt  README.md
c++-projects/c++-project-xxl-job-alert-manager/conf/: alert.conf
c++-projects/c++-project-xxl-job-alert-manager/config/: alert.conf
c++-projects/c++-project-xxl-job-alert-manager/include/: AppConfigLoader.h  ConfigFileUtil.h  Logger.h  XxlJobLog.h
c++-projects/c++-project-xxl-job-alert-manager/sql/: mysql.sql
c++-projects/c++-project-xxl-job-alert-manager/src/: Alert.cpp  AppConfigLoader.cpp  CMakeLists.txt  MySqlConnection.cpp  MySqlConnectionPool.cpp  NetworkUtil.cpp  WxQyApi.cpp  WxQyTokenRefresher.cpp  XxlJobLogDao.cpp  XxlJobMonitor.cpp  main.cpp
c++-projects/c++-project-xxl-job-alert-manager/test/: BaseTest.h  CMakeLists.txt  MySqlTest.h  WxQyTest.h  main.cpp
c++-study/: .gitignore  CMakeLists.txt  README.md
c++-study-1/: CMakeLists.txt  README.md  enca_utf8.sh
c++-study-1/day01/demo01/: main.cpp
c++-study-1/day01/demo02/: main.cpp
c++-study-1/day01/demo03/: main.cpp
c++-study-1/day01/demo04/: main.cpp
c++-study-1/day01/demo05/: main.cpp  main2.cpp  main3.cpp
c++-study-1/day01/demo06/: main.cpp
c++-study-1/day01/demo07/: main.cpp  main2.cpp
c++-study-1/day02/demo01/: main.cpp
c++-study-1/day02/demo02/: main.cpp  main2.cpp  main3.cpp  main4.cpp
c++-study-1/day02/demo3/: main.cpp
c++-study-1/day02/demo4/: main.cpp  main2.cpp  main3.cpp
c++-study-1/day02/demo5/: main.cpp  main2.cpp  main3.cpp
c++-study-1/day02/demo6/: main.cpp
c++-study-1/day02/demo7/: Teacher.cpp  Teacher.h  main.cpp
c++-study-1/day03/demo01/: main.cpp  main2.cpp  main3.cpp
c++-study-1/day03/demo02/: main.cpp  main2.cpp  main3.cpp  main4.cpp
c++-study-1/day03/demo03/: main.cpp  main2.cpp  main3.cpp
c++-study-1/day03/demo04/: main.cpp  main2.cpp  main3.cpp  main4.cpp
c++-study-1/day03/demo05/: main.cpp
c++-study-1/day03/demo06/: main.cpp  main2.cpp  main3.cpp
c++-study-1/day03/demo07/: main.cpp
c++-study-1/day04/demo01/: main.cpp
c++-study-1/day04/demo02/: Array.cpp  Array.h  main.cpp
c++-study-2/: CMakeLists.txt  README.md
c++-study-3/: .gitignore  CMakeLists.txt  README.md  autobuild.sh
c++-study-4/: .clang-format  .editorconfig  CMakeLists.txt  README.md
c++-study/shell/: enca.sh
c-study/: .gitignore  CMakeLists.txt  README.md
c-study/lesson-003/: program-desgin.c
c-study/test/: test-1.c
(+1167 files in other folders)
