cmake_minimum_required(VERSION 3.15)
project(c___study_1)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_FLAGS "-lpthread")

add_executable(day04-demo01 day04/demo01/main.cpp)
add_executable(day04-demo02 day04/demo02/main.cpp day04/demo02/Array.cpp)
add_executable(day04-demo03 day04/demo03/main.cpp)
add_executable(day04-demo04 day04/demo04/main.cpp)
add_executable(day04-demo05 day04/demo05/main.cpp)
add_executable(day04-demo06 day04/demo06/main.cpp)
add_executable(day04-demo07 day04/demo07/main.cpp)
add_executable(day04-demo08 day04/demo08/main.cpp)
add_executable(day04-demo09 day04/demo09/main.cpp day04/demo09/Array.cpp)
add_executable(day05-demo01 day05/demo01/main.cpp)
add_executable(day05-demo02 day05/demo02/main.cpp day05/demo02/MyString.cpp)
add_executable(day06-demo01 day06/demo01/main.cpp)
add_executable(day06-demo02 day06/demo02/main.cpp)
add_executable(day06-demo03 day06/demo03/main.cpp)
add_executable(day06-demo04 day06/demo04/main.cpp)
add_executable(day06-demo05 day06/demo05/main.cpp)
add_executable(day06-demo06 day06/demo06/main.cpp)
add_executable(day06-demo07 day06/demo07/main.cpp)
add_executable(day06-demo08 day06/demo08/main.cpp)
add_executable(day06-demo09 day06/demo09/main.cpp)
add_executable(day06-demo10 day06/demo10/main.cpp)
add_executable(day06-demo11 day06/demo11/main.cpp)
add_executable(day06-demo12 day06/demo12/main.cpp)
add_executable(day06-demo13 day06/demo13/main.cpp)
add_executable(day07-demo01 day07/demo01/main.cpp)
add_executable(day07-demo02 day07/demo02/main.cpp)
add_executable(day07-demo03 day07/demo03/main.cpp)
add_executable(day07-demo04 day07/demo04/main.cpp)
add_executable(day07-demo05 day07/demo05/main.cpp)
add_executable(day07-demo06 day07/demo06/main.cpp)
add_executable(day07-demo07 day07/demo07/main.cpp day07/demo07/CCiscoEncDec.cpp day07/demo07/CHwEncDec.cpp day07/demo07/CSckFactoryImp1.cpp day07/demo07/CSckFactoryImp2.cpp day07/demo07/Operation.cpp day07/demo07/des.cpp)
add_executable(day08-demo01 day08/demo01/main.c)
add_executable(day08-demo02 day08/demo02/main.c)
add_executable(day08-demo03 day08/demo03/main.c)
add_executable(day08-demo04 day08/demo04/main.c)
# add_executable(day08-demo05 day08/demo05/main.c)
add_executable(day08-demo06 day08/demo06/main.cpp)
add_executable(day08-demo07 day08/demo07/main.cpp)
add_executable(day08-demo07-2 day08/demo07/main2.cpp)
add_executable(day08-demo07-3 day08/demo07/main3.cpp)
add_executable(day08-demo08 day08/demo08/main.cpp)
add_executable(day09-demo01 day09/demo01/main.cpp)
add_executable(day09-demo01-2 day09/demo01/main2.cpp)
add_executable(day09-demo02 day09/demo02/main.cpp)
add_executable(day09-demo03 day09/demo03/main.cpp)
add_executable(day09-demo04 day09/demo04/main.cpp)
add_executable(day09-demo04-2 day09/demo04/main2.cpp)
add_executable(day09-demo04-3 day09/demo04/main3.cpp)
add_executable(day09-demo05 day09/demo05/main.cpp)
# add_executable(day09-demo05-2 day09/demo05/main2.cpp)
# add_executable(day09-demo05-3 day09/demo05/main3.cpp)
add_executable(day09-demo06 day09/demo06/main.cpp)
# add_executable(day09-demo07 day09/demo07/main.cpp day09/demo07/Teacher.cpp)
add_executable(day10-demo01 day10/demo01/main.cpp)
add_executable(day10-demo02 day10/demo02/main.cpp)
add_executable(day10-demo02-2 day10/demo02/main2.cpp)
add_executable(day10-demo02-3 day10/demo02/main3.cpp)
add_executable(day10-demo02-4 day10/demo02/main4.cpp)
add_executable(day10-demo02-5 day10/demo02/main5.cpp)
# add_executable(day10-demo02-6 day10/demo02/main6.cpp)
add_executable(day10-demo03 day10/demo03/main.cpp)
add_executable(day10-demo04 day10/demo04/main.cpp)
add_executable(day10-demo05 day10/demo05/main.cpp)
add_executable(day10-demo06 day10/demo06/main.cpp)
add_executable(day10-demo07 day10/demo07/main.cpp)
add_executable(day10-demo07-2 day10/demo07/main2.cpp)
add_executable(day10-demo08 day10/demo08/main.cpp day10/demo08/file.cpp)
