cmake_minimum_required(VERSION 3.15)
project(c___study)

set(CMAKE_CXX_STANDARD 11)

add_executable(day01-demo01 day01/demo01/main.cpp)
add_executable(day01-demo02 day01/demo02/main.cpp)
add_executable(day01-demo03 day01/demo03/main.cpp day01/demo03/game1.cpp day01/demo03/game2.cpp)
add_executable(day01-demo04 day01/demo04/main.cpp)
add_executable(day01-demo05 day01/demo05/main.cpp)
