cmake_minimum_required(VERSION 3.15)
project(c___study)

set(CMAKE_CXX_STANDARD 11)

add_executable(day01-demo01 day01/demo01/main.cpp)
add_executable(day01-demo02 day01/demo02/main.cpp)
add_executable(day01-demo03 day01/demo03/main.cpp day01/demo03/game1.cpp day01/demo03/game2.cpp)
add_executable(day01-demo04 day01/demo04/main.cpp)
add_executable(day01-demo05 day01/demo05/main.cpp)
add_executable(day01-demo06 day01/demo06/main.cpp)
add_executable(day01-demo07 day01/demo07/main.cpp)
add_executable(day01-demo08 day01/demo08/main.cpp)
add_executable(day01-demo09 day01/demo09/main.cpp)
add_executable(day01-demo10 day01/demo10/main.cpp)
add_executable(day01-demo11 day01/demo11/main.cpp)
add_executable(day01-demo12 day01/demo12/main.cpp)
add_executable(day02-demo01 day02/demo01/main.cpp)
add_executable(day02-demo02 day02/demo02/main.cpp)
add_executable(day02-demo03 day02/demo03/main.cpp)
add_executable(day02-demo04 day02/demo04/main.cpp)
add_executable(day02-demo05 day02/demo05/main.cpp)
add_executable(day02-demo06 day02/demo06/sub.c day02/demo06/main.cpp)
add_executable(day02-demo07 day02/demo07/main.c day02/demo07/main.cpp)
add_executable(day03-demo01 day03/demo01/main.cpp)
add_executable(day03-demo02 day03/demo02/point.cpp day03/demo02/circle.cpp day03/demo02/main.cpp)
add_executable(day03-demo03 day03/demo03/main.cpp)
add_executable(day03-demo04 day03/demo04/main.cpp)
add_executable(day03-demo05 day03/demo05/main.cpp)
add_executable(day03-demo06 day03/demo06/main.cpp)
add_executable(day03-demo07 day03/demo07/main.cpp)
add_executable(day03-demo08 day03/demo08/main.cpp)
add_executable(day03-demo09 day03/demo09/main.cpp)
add_executable(day03-demo10 day03/demo10/main.cpp)
add_executable(day03-demo11 day03/demo11/main.cpp)
add_executable(day04-demo01 day04/demo01/main.cpp)
add_executable(day04-demo02 day04/demo02/main.cpp)
add_executable(day04-demo03 day04/demo03/main.cpp)
add_executable(day04-demo04 day04/demo04/main.cpp)
add_executable(day04-demo05 day04/demo05/main.cpp)
add_executable(day04-demo06 day04/demo06/main.cpp)
add_executable(day04-demo07 day04/demo07/main.cpp)
add_executable(day04-demo08 day04/demo08/main.cpp)
add_executable(day04-demo09 day04/demo09/main.cpp)
add_executable(day04-demo10 day04/demo10/person.hpp day04/demo10/main.cpp)
add_executable(day04-demo11 day04/demo11/main.cpp)
add_executable(day04-demo12 day04/demo12/main.cpp)
add_executable(day05-demo01 day05/demo01/MyArray.cpp day05/demo01/main.cpp)
add_executable(day05-demo02 day05/demo02/main.cpp)
add_executable(day05-demo03 day05/demo03/main.cpp)
add_executable(day05-demo04 day05/demo04/main.cpp)
add_executable(day05-demo05 day05/demo05/main.cpp)
add_executable(day05-demo06 day05/demo06/main.cpp)
add_executable(day05-demo07 day05/demo07/main.cpp)
add_executable(day05-demo08 day05/demo08/main.cpp)
add_executable(day05-demo09 day05/demo09/main.cpp)
add_executable(day05-demo10 day05/demo10/MyString.cpp day05/demo10/main.cpp)
add_executable(day05-demo11 day05/demo11/main.cpp)
add_executable(day05-demo12 day05/demo12/main.cpp)
add_executable(day05-demo13 day05/demo13/main.cpp)
add_executable(day05-demo14 day05/demo14/main.cpp)
add_executable(day05-demo15 day05/demo15/main.cpp)
add_executable(day05-demo16 day05/demo16/main.cpp)
add_executable(day05-demo17 day05/demo17/main.cpp)
add_executable(day05-demo18 day05/demo18/main.cpp)
add_executable(day05-demo19 day05/demo19/main.cpp)
add_executable(day06-demo01 day06/demo01/main.cpp)
add_executable(day06-demo02 day06/demo02/main.cpp)
add_executable(day06-demo03 day06/demo03/main.cpp)
add_executable(day06-demo04 day06/demo04/main.cpp)
add_executable(day06-demo05 day06/demo05/main.cpp)
add_executable(day06-demo06 day06/demo06/main.cpp)
add_executable(day06-demo07 day06/demo07/main.cpp)
add_executable(day06-demo08 day06/demo08/main.cpp)
