cmake_minimum_required(VERSION 3.15)
project(c___study_3)

set(CMAKE_CXX_STANDARD 11)

add_executable(day01-demo01 day01/demo01/main.cpp day01/demo01/sum.cpp)
add_executable(day01-demo02 day01/demo02/main.cpp)
add_executable(day01-demo03 day01/demo03/main.cpp)
add_executable(day01-demo04 day01/demo04/main.cpp)
add_executable(day01-demo05 day01/demo05/main.c day01/demo05/main.cpp)
add_executable(day01-demo06 day01/demo06/main.cpp)
add_executable(day01-demo07 day01/demo07/main.cpp)
add_executable(day01-demo08 day01/demo08/main.cpp)
add_executable(day01-demo09 day01/demo09/main.cpp)
add_executable(day01-demo10 day01/demo10/main.cpp)
add_executable(day01-demo11 day01/demo11/main.cpp day01/demo11/ext.c)
add_executable(day02-demo01 day02/demo01/main.cpp)
add_executable(day02-demo02 day02/demo02/main.cpp)
add_executable(day02-demo03 day02/demo03/main.cpp)
add_executable(day02-demo04 day02/demo04/main.cpp)
add_executable(day02-demo05 day02/demo05/main.cpp)
add_executable(day02-demo06 day02/demo06/main.cpp)
add_executable(day02-demo06-2 day02/demo06/main2.cpp)
add_executable(day02-demo07 day02/demo07/main.cpp)
add_executable(day03-demo01 day03/demo01/main.cpp)
add_executable(day03-demo01-1 day03/demo01/main2.cpp)
add_executable(day03-demo02 day03/demo02/main.cpp)
add_executable(day03-demo03 day03/demo03/main.cpp)
add_executable(day03-demo04 day03/demo04/main.cpp)
add_executable(day04-demo01 day04/demo01/main.cpp)
add_executable(day04-demo01-2 day04/demo01/main2.cpp)
add_executable(day04-demo02 day04/demo02/main.cpp)
add_executable(day04-demo03 day04/demo03/main.cpp)
add_executable(day04-demo04 day04/demo04/main.cpp)
add_executable(day04-demo05 day04/demo05/main.cpp)
add_executable(day04-demo06 day04/demo06/main.cpp)
add_executable(day04-demo07 day04/demo07/main.cpp)
