cmake_minimum_required(VERSION 3.15)
project(c___study_3)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_BUILD_TYPE Debug)

if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    set(CMAKE_CXX_FLAGS "-lpthread")
endif()

add_executable(day01-demo01 day01/demo01/main.cpp day01/demo01/sum.cpp)
add_executable(day01-demo02 day01/demo02/main.cpp)
add_executable(day01-demo03 day01/demo03/main.cpp)
add_executable(day01-demo04 day01/demo04/main.cpp)
add_executable(day01-demo05 day01/demo05/main.c day01/demo05/main.cpp)
add_executable(day01-demo06 day01/demo06/main.cpp)
add_executable(day01-demo07 day01/demo07/main.cpp)
add_executable(day01-demo08 day01/demo08/main.cpp)
add_executable(day01-demo09 day01/demo09/main.cpp)
add_executable(day01-demo10 day01/demo10/main.cpp)
add_executable(day01-demo11 day01/demo11/main.cpp day01/demo11/ext.c)
add_executable(day02-demo01 day02/demo01/main.cpp)
add_executable(day02-demo02 day02/demo02/main.cpp)
add_executable(day02-demo03 day02/demo03/main.cpp)
add_executable(day02-demo04 day02/demo04/main.cpp)
add_executable(day02-demo05 day02/demo05/main.cpp)
add_executable(day02-demo06 day02/demo06/main.cpp)
add_executable(day02-demo06-2 day02/demo06/main2.cpp)
add_executable(day02-demo07 day02/demo07/main.cpp)
add_executable(day03-demo01 day03/demo01/main.cpp)
add_executable(day03-demo01-1 day03/demo01/main2.cpp)
add_executable(day03-demo02 day03/demo02/main.cpp)
add_executable(day03-demo03 day03/demo03/main.cpp)
add_executable(day03-demo04 day03/demo04/main.cpp)
add_executable(day04-demo01 day04/demo01/main.cpp)
add_executable(day04-demo01-2 day04/demo01/main2.cpp)
add_executable(day04-demo02 day04/demo02/main.cpp)
add_executable(day04-demo03 day04/demo03/main.cpp)
add_executable(day04-demo04 day04/demo04/main.cpp)
add_executable(day04-demo05 day04/demo05/main.cpp)
add_executable(day04-demo05-2 day04/demo05/main2.cpp)
add_executable(day04-demo05-3 day04/demo05/main3.cpp)
add_executable(day04-demo06 day04/demo06/main.cpp)
add_executable(day04-demo07 day04/demo07/main.cpp)
add_executable(day05-demo01 day05/demo01/main.cpp)
add_executable(day05-demo02 day05/demo02/main.cpp)
add_executable(day05-demo03 day05/demo03/main.cpp)
add_executable(day05-demo04 day05/demo04/main.cpp)
add_executable(day05-demo04-2 day05/demo04/main2.cpp)
add_executable(day05-demo05 day05/demo05/main.cpp)
add_executable(day05-demo06 day05/demo06/main.cpp)
add_executable(day05-demo07 day05/demo07/main.cpp)
add_executable(day05-demo07-2 day05/demo07/main2.cpp)
add_executable(day05-demo08 day05/demo08/main.cpp)
add_executable(day05-demo08-2 day05/demo08/main2.cpp)
add_executable(day05-demo09 day05/demo09/main.cpp)
add_executable(day05-demo09-2 day05/demo09/main2.cpp)
add_executable(day05-demo09-3 day05/demo09/main3.cpp)
add_executable(day05-demo09-4 day05/demo09/main4.cpp)
add_executable(day06-demo1 day06/demo01/main.cpp)
add_executable(day06-demo1-2 day06/demo01/main2.cpp)
add_executable(day06-demo2 day06/demo02/main.cpp)
add_executable(day06-demo3 day06/demo03/main.cpp)
add_executable(day07-demo1 day07/demo01/main.cpp)
add_executable(day07-demo1-2 day07/demo01/main2.cpp)
add_executable(day07-demo2 day07/demo02/main.cpp)
add_executable(day07-demo2-2 day07/demo02/main2.cpp)
add_executable(day07-demo3 day07/demo03/main.cpp)
add_executable(day07-demo3-2 day07/demo03/main2.cpp)
add_executable(day07-demo3-3 day07/demo03/main3.cpp)
add_executable(day07-demo3-4 day07/demo03/main4.cpp)
add_executable(day07-demo4 day07/demo04/main.cpp)
add_executable(day07-demo4-2 day07/demo04/main2.cpp)
add_executable(day07-demo4-3 day07/demo04/main3.cpp)
add_executable(day07-demo5 day07/demo05/main.cpp)
add_executable(day07-demo6 day07/demo06/main.cpp)
add_executable(day07-demo6-2 day07/demo06/main2.cpp)
add_executable(day07-demo6-3 day07/demo06/main3.cpp)
add_executable(day07-demo7 day07/demo07/main.cpp)
add_executable(day08-demo1 day08/demo01/main.cpp)
add_executable(day09-demo01 day09/demo01/main.cpp)
add_executable(day09-demo02 day09/demo02/main.cpp)
add_executable(day09-demo03 day09/demo03/main.cpp)
add_executable(day09-demo04 day09/demo04/main.cpp)
add_executable(day09-demo04-2 day09/demo04/main2.cpp)
add_executable(day09-demo05 day09/demo05/main.cpp)
add_executable(day09-demo05-1 day09/demo05/main2.cpp)
add_executable(day09-demo06 day09/demo06/main.cpp)
add_executable(day09-demo07 day09/demo07/main.cpp)
add_executable(day10-demo01 day10/demo01/main.cpp)
add_executable(day10-demo02 day10/demo02/main.cpp)
add_executable(day10-demo03 day10/demo03/main.cpp)
add_executable(day10-demo04 day10/demo04/main.cpp)
add_executable(day10-demo04-2 day10/demo04/main2.cpp)
add_executable(day10-demo04-3 day10/demo04/main3.cpp)
add_executable(day10-demo04-4 day10/demo04/main4.cpp)
add_executable(day10-demo05 day10/demo05/main.cpp)
add_executable(day10-demo05-2 day10/demo05/main2.cpp)
add_executable(day10-demo06 day10/demo06/main.cpp)
add_executable(day10-demo06-2 day10/demo06/main2.cpp)
add_executable(day11-demo01 day11/demo01/main.cpp)
add_executable(day11-demo01-2 day11/demo01/main2.cpp)
add_executable(day11-demo01-3 day11/demo01/main3.cpp)
add_executable(day11-demo02 day11/demo02/main.cpp)
add_executable(day11-demo02-2 day11/demo02/main2.cpp)
add_executable(day11-demo02-3 day11/demo02/main3.cpp)
add_executable(day11-demo03 day11/demo03/main.cpp)
add_executable(day11-demo03-2 day11/demo03/main2.cpp)
add_executable(day11-demo04 day11/demo04/main.cpp)
add_executable(day11-demo04-2 day11/demo04/main2.cpp)
add_executable(day11-demo05 day11/demo05/main.cpp)
add_executable(day11-demo05-2 day11/demo05/main2.cpp)
add_executable(day11-demo06 day11/demo06/main.cpp)
add_executable(day11-demo07 day11/demo07/main.cpp)
add_executable(day11-demo07-2 day11/demo07/main2.cpp)
add_executable(day11-demo08 day11/demo08/main.cpp)
add_executable(day11-demo08-2 day11/demo08/main2.cpp)
add_executable(day11-demo08-3 day11/demo08/main3.cpp)
add_executable(day12-demo01 day12/demo01/main.cpp)
add_executable(day12-demo02 day12/demo02/main.cpp)
add_executable(day12-demo03 day12/demo03/main.cpp)
