cmake_minimum_required(VERSION 3.15)
project(c___study_4)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_BUILD_TYPE Debug)

if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    set(CMAKE_CXX_FLAGS "-lpthread")
endif()

add_executable(day01-demo01 day01/demo01/main.cpp)
add_executable(day01-demo02 day01/demo02/main.cpp)
add_executable(day01-demo03 day01/demo03/main.cpp)
add_executable(day01-demo04 day01/demo04/main.cpp)
add_executable(day01-demo04-2 day01/demo04/main2.cpp)
add_executable(day01-demo05 day01/demo05/main.cpp)
add_executable(day01-demo06 day01/demo06/main.cpp)
add_executable(day01-demo07 day01/demo07/main.cpp)
add_executable(day01-demo08 day01/demo08/main.cpp)
add_executable(day01-demo09 day01/demo09/main.cpp)
add_executable(day02-demo01 day02/demo01/main.cpp)
add_executable(day02-demo02 day02/demo02/main.cpp)
add_executable(day02-demo03 day02/demo03/main.cpp)
add_executable(day02-demo04 day02/demo04/main.cpp)
add_executable(day02-demo05 day02/demo05/main.cpp)
add_executable(day02-demo06 day02/demo06/main.cpp)
add_executable(day02-demo07 day02/demo07/main.cpp)
add_executable(day02-demo08 day02/demo08/main.cpp)
add_executable(day02-demo08-2 day02/demo08/main2.cpp)
add_executable(day02-demo09 day02/demo09/main.cpp)
add_executable(day02-demo09-2 day02/demo09/main2.cpp)
add_executable(day02-demo09-3 day02/demo09/main3.cpp)
add_executable(day02-demo10 day02/demo10/main.cpp)
add_executable(day02-demo11 day02/demo11/main.cpp)
add_executable(day03-demo01 day03/demo01/main.cpp)
add_executable(day03-demo01-2 day03/demo01/main2.cpp)
add_executable(day03-demo02 day03/demo02/main.cpp)
add_executable(day03-demo02-2 day03/demo02/main2.cpp)
add_executable(day03-demo02-3 day03/demo02/main3.cpp)
add_executable(day03-demo02-4 day03/demo02/main4.cpp)
add_executable(day03-demo02-5 day03/demo02/main5.cpp)
add_executable(day03-demo02-6 day03/demo02/main6.cpp)
add_executable(day03-demo03 day03/demo03/main.cpp)
add_executable(day03-demo03-2 day03/demo03/main2.cpp)
add_executable(day03-demo04 day03/demo04/main.cpp)
add_executable(day03-demo04-2 day03/demo04/main2.cpp)
add_executable(day03-demo04-3 day03/demo04/main3.cpp)
add_executable(day03-demo04-4 day03/demo04/main4.cpp)
add_executable(day03-demo04-5 day03/demo04/main5.cpp)
add_executable(day03-demo05 day03/demo05/main.cpp)
add_executable(day03-demo05-2 day03/demo05/main2.cpp)
add_executable(day03-demo05-3 day03/demo05/main3.cpp)
add_executable(day03-demo05-4 day03/demo05/main4.cpp)
add_executable(day03-demo06 day03/demo06/main.cpp)
add_executable(day03-demo06-2 day03/demo06/main2.cpp)
add_executable(day03-demo06-3 day03/demo06/main3.cpp)
add_executable(day03-demo06-4 day03/demo06/main4.cpp)
add_executable(day03-demo07 day03/demo07/main.cpp)
add_executable(day03-demo07-2 day03/demo07/main2.cpp)
add_executable(day03-demo08 day03/demo08/main.cpp)
add_executable(day03-demo09 day03/demo09/main.cpp)
add_executable(day03-demo09-2 day03/demo09/main2.cpp)
add_executable(day03-demo09-3 day03/demo09/main3.cpp)
add_executable(day03-demo10 day03/demo10/main.cpp)
add_executable(day03-demo10-2 day03/demo10/main2.cpp)
add_executable(day03-demo10-3 day03/demo10/main3.cpp)
add_executable(day03-demo10-4 day03/demo10/main4.cpp day03/demo10/MyClass.cpp)
add_executable(day03-demo11 day03/demo11/main.cpp)
add_executable(day03-demo11-2 day03/demo11/main2.cpp)
add_executable(day03-demo11-3 day03/demo11/main3.cpp)
add_executable(day03-demo11-4 day03/demo11/main4.cpp)
add_executable(day03-demo12 day03/demo12/main.cpp)
add_executable(day03-demo12-2 day03/demo12/main2.cpp)
add_executable(day03-demo12-3 day03/demo12/main3.cpp)
add_executable(day03-demo12-4 day03/demo12/main4.cpp)
add_executable(day03-demo12-5 day03/demo12/main5.cpp)
add_executable(day03-demo12-6 day03/demo12/main6.cpp)
add_executable(day03-demo13 day03/demo13/main.cpp)
add_executable(day03-demo13-2 day03/demo13/main2.cpp)
add_executable(day03-demo13-3 day03/demo13/main3.cpp)
add_executable(day03-demo14 day03/demo14/main.cpp)
add_executable(day03-demo14-2 day03/demo14/main2.cpp)
add_executable(day03-demo14-3 day03/demo14/main3.cpp)
add_executable(day04-demo1 day04/demo01/main.cpp)
add_executable(day04-demo2 day04/demo02/main.cpp)
add_executable(day04-demo2-2 day04/demo02/main2.cpp)
add_executable(day04-demo2-3 day04/demo02/main3.cpp)
add_executable(day04-demo3 day04/demo03/main.cpp)
add_executable(day04-demo3-2 day04/demo03/main2.cpp)
add_executable(day04-demo4 day04/demo04/main.cpp)
add_executable(day04-demo4-2 day04/demo04/main2.cpp)
add_executable(day04-demo5 day04/demo05/main.cpp)
add_executable(day04-demo5-2 day04/demo05/main2.cpp)
add_executable(day04-demo5-3 day04/demo05/main3.cpp)
add_executable(day04-demo6 day04/demo06/main.cpp)
add_executable(day04-demo6-2 day04/demo06/main2.cpp)
add_executable(day04-demo7 day04/demo07/main.cpp)
add_executable(day05-demo1 day05/demo01/main.cpp)
add_executable(day05-demo1-2 day05/demo01/main2.cpp)
add_executable(day05-demo1-3 day05/demo01/main3.cpp)
add_executable(day05-demo1-4 day05/demo01/main4.cpp)
add_executable(day05-demo2 day05/demo02/main.cpp)
add_executable(day05-demo2-2 day05/demo02/main2.cpp)
add_executable(day05-demo2-3 day05/demo02/main3.cpp)
add_executable(day05-demo2-4 day05/demo02/main4.cpp)
add_executable(day05-demo2-5 day05/demo02/main5.cpp)
add_executable(day05-demo2-6 day05/demo02/main6.cpp)
add_executable(day05-demo2-7 day05/demo02/main7.cpp)
add_executable(day05-demo3 day05/demo03/main.cpp)
add_executable(day05-demo3-2 day05/demo03/main2.cpp)
add_executable(day05-demo3-3 day05/demo03/main3.cpp)
add_executable(day05-demo3-4 day05/demo03/main4.cpp)
add_executable(day05-demo4 day05/demo04/main.cpp)
add_executable(day05-demo4-2 day05/demo04/main2.cpp)
add_executable(day05-demo4-3 day05/demo04/main3.cpp)
add_executable(day05-demo4-4 day05/demo04/main4.cpp)
add_executable(day05-demo4-5 day05/demo04/main5.cpp)
add_executable(day05-demo5 day05/demo05/main.cpp)
add_executable(day05-demo5-2 day05/demo05/main2.cpp)
add_executable(day05-demo6 day05/demo06/main.cpp)
add_executable(day05-demo6-2 day05/demo06/main2.cpp)
add_executable(day05-demo6-3 day05/demo06/main3.cpp)
add_executable(day05-demo6-4 day05/demo06/main4.cpp)
add_executable(day05-demo6-5 day05/demo06/main5.cpp)
add_executable(day05-demo6-6 day05/demo06/main6.cpp)
