cmake_minimum_required(VERSION 3.15)
project(c___study)

set(CMAKE_CXX_STANDARD 11)

add_executable(day01-demo01 day01/demo01/main.cpp)
add_executable(day01-demo02 day01/demo02/main.cpp)
add_executable(day01-demo03 day01/demo03/main.cpp)
add_executable(day01-demo04 day01/demo04/main.cpp)
add_executable(day01-demo05 day01/demo05/main.cpp)
add_executable(day01-demo06 day01/demo06/main.cpp)
add_executable(day01-demo07 day01/demo07/main.cpp)
add_executable(day01-demo07-2 day01/demo07/main2.cpp)
add_executable(day02-demo01 day02/demo01/main.cpp)
add_executable(day02-demo02 day02/demo02/main.cpp)
add_executable(day02-demo02-2 day02/demo02/main2.cpp)
add_executable(day02-demo02-3 day02/demo02/main3.cpp)
add_executable(day02-demo02-4 day02/demo02/main4.cpp)
add_executable(day02-demo03 day02/demo3/main.cpp)
add_executable(day02-demo04 day02/demo4/main.cpp)
add_executable(day02-demo04-2 day02/demo4/main2.cpp)
add_executable(day02-demo04-3 day02/demo4/main3.cpp)
add_executable(day02-demo05 day02/demo5/main.cpp)