cmake_minimum_required(VERSION 3.15)
project(c___study)

set(CMAKE_CXX_STANDARD 11)

add_executable(day01-demo01 day01/demo01/main.cpp)
add_executable(day01-demo02 day01/demo02/main.cpp)
add_executable(day01-demo03 day01/demo03/main.cpp)
add_executable(day01-demo04 day01/demo04/main.cpp)
add_executable(day01-demo05 day01/demo05/main.cpp)
add_executable(day01-demo05-2 day01/demo05/main2.cpp)
add_executable(day01-demo06 day01/demo06/main.cpp)
add_executable(day01-demo07 day01/demo07/main.cpp)
add_executable(day01-demo07-2 day01/demo07/main2.cpp)
add_executable(day02-demo01 day02/demo01/main.cpp)
add_executable(day02-demo02 day02/demo02/main.cpp)
add_executable(day02-demo02-2 day02/demo02/main2.cpp)
add_executable(day02-demo02-3 day02/demo02/main3.cpp)
add_executable(day02-demo02-4 day02/demo02/main4.cpp)
add_executable(day02-demo03 day02/demo3/main.cpp)
add_executable(day02-demo04 day02/demo4/main.cpp)
add_executable(day02-demo04-2 day02/demo4/main2.cpp)
add_executable(day02-demo04-3 day02/demo4/main3.cpp)
add_executable(day02-demo05 day02/demo5/main.cpp)
add_executable(day02-demo05-2 day02/demo5/main2.cpp)
add_executable(day02-demo05-3 day02/demo5/main3.cpp)
add_executable(day02-demo06 day02/demo6/main.cpp)
add_executable(day02-demo07 day02/demo7/main.cpp day02/demo7/Teacher.cpp)
add_executable(day03-demo01 day03/demo01/main.cpp)
add_executable(day03-demo01-2 day03/demo01/main2.cpp)
add_executable(day03-demo01-3 day03/demo01/main3.cpp)
add_executable(day03-demo02 day03/demo02/main.cpp)
add_executable(day03-demo02-2 day03/demo02/main2.cpp)
add_executable(day03-demo02-3 day03/demo02/main3.cpp)
add_executable(day03-demo02-4 day03/demo02/main4.cpp)
add_executable(day03-demo03 day03/demo03/main.cpp)
add_executable(day03-demo03-2 day03/demo03/main2.cpp)
add_executable(day03-demo03-3 day03/demo03/main3.cpp)
add_executable(day03-demo04 day03/demo04/main.cpp)
add_executable(day03-demo04-2 day03/demo04/main2.cpp)
add_executable(day03-demo04-3 day03/demo04/main3.cpp)
add_executable(day03-demo04-4 day03/demo04/main4.cpp)
add_executable(day03-demo05 day03/demo05/main.cpp)
add_executable(day03-demo06 day03/demo06/main.cpp)
add_executable(day03-demo06-2 day03/demo06/main2.cpp)
add_executable(day03-demo06-3 day03/demo06/main3.cpp)
add_executable(day03-demo07 day03/demo07/main.cpp)

# ...(省略)

add_executable(day10-demo08 day10/demo08/main.cpp day10/demo08/file.cpp)
add_executable(day11-demo02-3 day11/demo01/main.cpp)
add_executable(day12-demo01-1 day12/demo01/main.cpp)
add_executable(day12-demo01-2 day12/demo01/main2.cpp)
add_executable(day12-demo01-3 day12/demo01/main3.cpp)
add_executable(day12-demo01-4 day12/demo01/main4.cpp)
add_executable(day12-demo01-5 day12/demo01/main5.cpp)
add_executable(day12-demo02-1 day12/demo02/main.cpp)
add_executable(day12-demo02-2 day12/demo02/main2.cpp)
add_executable(day12-demo03-1 day12/demo03/main.cpp)
add_executable(day12-demo03-2 day12/demo03/main2.cpp)
add_executable(day12-demo03-3 day12/demo03/main3.cpp)
add_executable(day12-demo03-4 day12/demo03/main4.cpp)
add_executable(day12-demo03-5 day12/demo03/main5.cpp)
add_executable(day12-demo04-1 day12/demo04/main.cpp)
add_executable(day12-demo04-2 day12/demo04/main2.cpp)
add_executable(day12-demo04-3 day12/demo04/main3.cpp)
add_executable(day12-demo05-1 day12/demo05/main.cpp)
add_executable(day12-demo06-1 day12/demo06/main.cpp)
add_executable(day12-demo07-1 day12/demo07/main.cpp)
add_executable(day12-demo07-2 day12/demo07/main2.cpp)